<resources>
  <string name="app_name">StoryStroll</string>
  <string name="sign_in">Sign In</string>
  <string name="enter_email">Enter Email</string>
  <string name="enter_password">Enter Password</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="submit">Submit</string>
  <string name="join_community">Join the Community!</string>
  <string name="sign_up">Sign Up</string>
  <string name="enter_first_name">Enter First Name</string>
  <string name="enter_last_name">Enter Last Name</string>
  <string name="already_a_member">Already a Member?</string>
  <string name="logout">Logout</string>
  <string name="ranking">Ranking</string>
  <string name="points">Points</string>
  <string name="treasures">Treasures</string>
  <string name="leaderboard">Leaderboard</string>
  <string name="sign_up_with_google">Sign up with Google</string>
  <string name="profile_image">Profile Image</string>
  <string name="choose_profile_image">Choose Profile Image</string>
  <string name="profile">Profile</string>
  <string name="close">Close</string>
  <string name="menu">Menu</string>
  <string name="add_treasure">Add Treasure</string>
  <string name="my_treasures">My Treasures</string>
  <string name="home">Home</string>
  <string name="saved_treasures">Saved Treasures</string>
  <string name="treasure_image">Treasure Image</string>
  <string name="no_records_found">No records found</string>
  <string name="save_the_treasure">Save the treasure</string>
  <string name="treasure_title">Treasure Title</string>
  <string name="treasure_info">Treasure Info</string>
  <string name="treasure_description">Treasure Description</string>
  <string name="choose_image">Choose Image</string>
  <string name="take_photo">Take Photo</string>
  <string name="cancel">Cancel</string>
  <string name="save">Save</string>
  <string name="add_new_treasure">Add New Treasure</string>
  <string name="profile_image_preview">Profile Image Preview</string>
</resources>