<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.SignUpActivity">

  <ScrollView
    android:id="@+id/scrollView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:fillViewport="true"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center"
      android:padding="16dp">

      <!-- The CardView to contain the sign-in form -->
      <com.google.android.material.card.MaterialCardView
        android:id="@+id/signUpCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:strokeWidth="2dp"
        app:strokeColor="#484a48"
        app:cardBackgroundColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="24dp">

          <!-- Sign Up Form -->
          <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

          <!-- First Name and Last Name Fields -->
          <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="firstname"
            android:hint="@string/enter_first_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up" />

          <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="lastname"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name" />

          <!-- Unique Name Field -->
          <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="email"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name" />

          <!-- Password Field -->
          <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/confirm_password" />

          <!-- Confirm Password Field -->
          <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageCard" />

          <!-- Profile Image Preview -->
          <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageCard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/profile_image_button">

            <ImageView
              android:id="@+id/profile_image_preview"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:contentDescription="@string/profile_image_preview"
              android:scaleType="fitXY" />

          </com.google.android.material.card.MaterialCardView>

          <!-- Profile Image Button -->
          <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_image_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_profile_image"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signUpButton"
            android:layout_marginTop="16dp"/>

          <!-- Sign Up Button -->
          <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_button"
            tools:layout_editor_absoluteX="24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

      </com.google.android.material.card.MaterialCardView>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <!-- Sign In Message and Link -->
        <TextView
          android:id="@+id/sign_in_message"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          android:textStyle="bold"
          android:text="@string/already_a_member" />

        <TextView
          android:id="@+id/sign_up_link"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:onClick="onSignInClick"
          android:text="@string/sign_in"
          android:textSize="18sp"
          android:textStyle="bold"
          android:textColor="#3252a8"/>

      </LinearLayout>
    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>