<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/toolbar"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  app:contentInsetStartWithNavigation="0dp"
  android:background="?attr/colorPrimary">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_marginEnd="18dp">

    <!-- Hamburger Icon -->
    <ImageView
      android:id="@+id/hamburger_icon"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:src="@drawable/ic_menu"
      android:contentDescription="@string/menu"
      android:padding="8dp"
      android:clickable="true"
      android:focusable="true" />

    <!-- Title -->
    <TextView
      android:id="@+id/title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/app_name"
      android:textSize="24sp"
      android:textStyle="bold"
      android:textColor="@android:color/white"
      android:gravity="center"
      android:layout_weight="1"/>

    <!-- Profile Icon -->
    <com.google.android.material.card.MaterialCardView
      android:id="@+id/imageCard"
      android:layout_width="34dp"
      android:layout_height="34dp"
      app:cardCornerRadius="8dp"
      app:cardElevation="0dp">

      <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/profile"
        android:scaleType="fitXY"
        android:background="@drawable/bg_image_rounded"
        android:clickable="true"
        android:focusable="true" />

    </com.google.android.material.card.MaterialCardView>

  </LinearLayout>

</androidx.appcompat.widget.Toolbar>